<resources>
    <string name="app_name">Mine Klass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="schedule_test">8:00 AM - 9:00 AM</string>
    <string name="header_image">Navigation Drawer Header Image</string>
    <string name="schedule">Schedule</string>
    <string name="settings_refresh_desc">Refresh data from the internet.</string>
    <string name="refresh">Refresh</string>
    <string name="splash_image">Splash Image.</string>
    <string name="navigation_drawer_button">Navigation drawer button</string>
    <string name="class_view_separator">Class view separator</string>
    <string name="about_desc_text">Scheduler application that will tell you how long you\'ve got till your next class.</string>
    <string name="time_remaining">Time remaining for next class: %1$s</string>
    <string name="no_class_today">No classes for today!!</string>
    <string name="save">Save</string>
    <string name="change_data_url">Change data url…</string>
    <string name="data_from_internet">data_from_internet</string>
    <string name="pref_data">got_data_from_internet</string>
    <string name="read_from_json">Read data from a json file</string>
    <string name="read">Read</string>
    <string name="class_type_desc">Picture showing class type.</string>
    <string name="class_time">Time: %s</string>
    <string name="class_name">Class: %s</string>
    <string name="class_teacher">Teacher: %s</string>
    <string name="class_day">Day: %s</string>
    <string name="class_room">Room: %s</string>
    <string name="class_block">Block: %s</string>
    <string name="class_group">Group: %s</string>
    <string name="class_moduleCode">Module Code: %s</string>

    <string name="edit">Edit</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="edit_class_label">Class:</string>
    <string name="class_name_hint">Class name…</string>
    <string name="teacher_label">Teacher:</string>
    <string name="subject_teacher_hint">Subject teacher…</string>
    <string name="day_label">Day:</string>
    <string name="room_label">Room:</string>
    <string name="class_room_hint">Class Room…</string>
    <string name="block_label">Block:</string>
    <string name="class_block_hint">Class Block…</string>
    <string name="group_label">Group:</string>
    <string name="group_hint">Group…</string>
    <string name="module_code_hint">Module Code…</string>
    <string name="module_code_label">Module code:</string>
    <string name="class_type_label">Class Type:</string>
    <string name="add_class">Add Class</string>
    <string name="delete_all_classes">Delete all classes.</string>
    <string name="delete">Delete</string>
    <string name="dark_mode">Dark mode</string>
    <string name="patron">Thanks to our generous patron Amrit Regmi !</string>
    <string name="today_desc">Check mark to indicate that today is the class.</string>

    <string-array name="days_array">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string-array name="class_type_array">
        <item>Workshop</item>
        <item>Lecture</item>
        <item>Discussion</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>